terraform/config/app/echo/echo1.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo1
  annotations:
    external-dns.alpha.kubernetes.io/hostname: echo1.oci.cett.dev.br
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: echo1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 8
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
      - name: echo1
        image: hashicorp/http-echo
        args:
        - "-text=echo1.oci.cett.dev.br"
        ports:
        - containerPort: 5678
        resources:
          requests:
            memory: "16Mi"
            cpu: "62m"
          limits:
            memory: "32Mi"
            cpu: "125m"
